--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -9,4 +9,8 @@ RUN apk update --no-cache \
     && wget -O - https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz | tar xzf - -C /usr/local/bin \
     && apk del wget
 
+COPY . .
+
+RUN npm install
+
 EXPOSE 3000
